--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_mobile_ads: ^1.2.0
+  connectivity_plus: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   transparent_image: ^2.0.0
   cached_network_image: ^3.2.0
-
+  sqflite:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -65,7 +66,8 @@ flutter:
      - assets/new_pokedex.json
      - assets/icons/
      - assets/Stars.png
-
+     - assets/opt/
+     - assets/mini/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
